--- a/index.html
+++ b/index.html
@@ -497,14 +497,64 @@
       </div>
     </section>
 
-    <!-- pricelist -->
-    <section id="pricelist">
-      <div class="container">
-        <div class="d-flex">
-          
+    <!-- pricing -->
+    <section id="pricing" style="margin-top: -18px;">
+        <div class="sec-pricing">
+            <div class="container">
+                <div class="sec-card-pricing">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12 text-center">
+                            <div class="card-price text-center">
+                                <p class="type-pricing">Personal</p>
+                                <img src="assets/img/icons/1 User.png" alt="user1">
+                                <p class="price-pricing">Rp. 2.900.000</p>
+                                <p class="text-user-pricing text-white">/orang</p>
+                                <div class="border-price"></div>
+                                <div class="benefit-price">
+                                    <img src="assets/img/icons/check.png" alt="check">
+                                    <p class="detail-price">Mentoring</p>
+                                </div>
+                                <div class="benefit-price">
+                                    <img src="assets/img/icons/check.png" alt="check">
+                                    <p class="detail-price">Mentoring</p>
+                                </div>
+                                <div class="benefit-price">
+                                    <img src="assets/img/icons/check.png" alt="check">
+                                    <p class="detail-price">Mentoring</p>
+                                </div>
+                            </div>
+                            <button class="btn btn-primary btn-first" type="submit" style="margin-top: -32px;">Daftar
+                                Sekarang</button>
+                        </div>
+                        <div class="col-md-6 col-sm-12 text-center">
+                            <div class="card-price text-center">
+                                <p class="type-pricing">Personal</p>
+                                <img src="assets/img/icons/1 User.png" alt="user1">
+                                <p class="price-pricing">Rp. 2.900.000</p>
+                                <p class="text-user-pricing text-white">/orang</p>
+                                <div class="border-price"></div>
+                                <div class="benefit-price">
+                                    <img src="assets/img/icons/check.png" alt="check">
+                                    <p class="detail-price">Mentoring</p>
+                                </div>
+                                <div class="benefit-price">
+                                    <img src="assets/img/icons/check.png" alt="check">
+                                    <p class="detail-price">Mentoring</p>
+                                </div>
+                                <div class="benefit-price">
+                                    <img src="assets/img/icons/check.png" alt="check">
+                                    <p class="detail-price">Mentoring</p>
+                                </div>
+                            </div>
+                            <button class="btn btn-primary" type="submit" style="margin-top: -32px;">Daftar
+                                Sekarang</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
+
 
     <!-- FAQ -->
     <section id="faq">
