update paling terbaru

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                             <div class="card-price text-center">
                                 <p class="type-pricing">Personal</p>
                                 <img src="assets/img/icons/1 User.png" alt="user1">
-                                <p class="price-pricing">Rp. 2.900.000</p>
+                                <p class="price-pricing">Rp2.900.000</p>
                                 <p class="text-user-pricing text-white">/orang</p>
                                 <div class="border-price"></div>
                                 <div class="benefit-price">
@@ -516,11 +516,11 @@
                                 </div>
                                 <div class="benefit-price">
                                     <img src="assets/img/icons/check.png" alt="check">
-                                    <p class="detail-price">Mentoring</p>
+                                    <p class="detail-price">Sertifikasi</p>
                                 </div>
                                 <div class="benefit-price">
                                     <img src="assets/img/icons/check.png" alt="check">
-                                    <p class="detail-price">Mentoring</p>
+                                    <p class="detail-price">Materi</p>
                                 </div>
                             </div>
                             <button class="btn btn-primary btn-first" type="submit" style="margin-top: -32px;">Daftar
@@ -528,9 +528,9 @@
                         </div>
                         <div class="col-md-6 col-sm-12 text-center">
                             <div class="card-price text-center">
-                                <p class="type-pricing">Personal</p>
-                                <img src="assets/img/icons/1 User.png" alt="user1">
-                                <p class="price-pricing">Rp. 2.900.000</p>
+                                <p class="type-pricing">Kelompok</p>
+                                <img src="assets/img/icons/3 User.png" alt="user1">
+                                <p class="price-pricing">Rp1.900.000</p>
                                 <p class="text-user-pricing text-white">/orang</p>
                                 <div class="border-price"></div>
                                 <div class="benefit-price">
@@ -539,11 +539,11 @@
                                 </div>
                                 <div class="benefit-price">
                                     <img src="assets/img/icons/check.png" alt="check">
-                                    <p class="detail-price">Mentoring</p>
+                                    <p class="detail-price">Sertifikasi</p>
                                 </div>
                                 <div class="benefit-price">
                                     <img src="assets/img/icons/check.png" alt="check">
-                                    <p class="detail-price">Mentoring</p>
+                                    <p class="detail-price">Materi</p>
                                 </div>
                             </div>
                             <button class="btn btn-primary" type="submit" style="margin-top: -32px;">Daftar
