--- a/index.html
+++ b/index.html
@@ -317,13 +317,12 @@
             <div class="col-lg-4">
               <div class="card">
                 <div class="card-image">
-                  <img src="assets/img/images/icon.svg" />
+                  <img src="assets/img/images/icon4.svg" />
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">Creative & Technical Brief</h5>
+                  <h5 class="card-title">Skill Video Editing Expert</h5>
                   <p class="card-text">
-                    Membangun pola pikir strategi untuk sebuah proyek dalam
-                    bidang kreatif.
+                    Meningkatkan skill editing video dari dasar sampai expert agar konten semakin menarik.
                   </p>
                 </div>
               </div>
@@ -331,13 +330,12 @@
             <div class="col-lg-4">
               <div class="card">
                 <div class="card-image">
-                  <img src="assets/img/images/icon2.svg" />
+                  <img src="assets/img/images/icon5.svg" />
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">Multimedia Creative Research</h5>
+                  <h5 class="card-title">Content & Media Planning</h5>
                   <p class="card-text">
-                    Mampu menciptakan konten yang menarik dengan egagment yang
-                    tinggi.
+                    Mampu memilih dan mengorganisir media yang paling cocok untuk strategi marketing.
                   </p>
                 </div>
               </div>
@@ -345,15 +343,14 @@
             <div class="col-lg-4">
               <div class="card">
                 <div class="card-image">
-                  <img src="assets/img/images/icon3.svg" />
+                  <img src="assets/img/images/icon6.svg" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">
-                    Branding & Digital Marketing Basics
+                    Create Visual/Graphic Content
                   </h5>
                   <p class="card-text">
-                    Membangun pola pikir strategi pemasaran menggunakan media
-                    sosial.
+                   Meningkatkan skill membangun konten visual.
                   </p>
                 </div>
               </div>
@@ -476,21 +473,21 @@
         <div class="d-flex justify-content-between" style="gap: 16px;">
           <div >
             <p>Pendaftaran hingga</p>
-            <h6>25 Februari 2022</h6>
+            <h4>25 Februari 2022</h4>
           </div>
           <svg width="3" height="123" viewBox="0 0 3 123" fill="none" xmlns="http://www.w3.org/2000/svg">
          <line x1="1.5" y1="1.5" x2="1.50001" y2="121.5" stroke="white" stroke-opacity="0.2" stroke-width="3" stroke-linecap="round"/>
           </svg>
       <div >
             <p>Kuota</p>
-            <h6>50 Orang</h6>
+            <h4>50 Orang</h4>
           </div>
           <svg width="3" height="123" viewBox="0 0 3 123" fill="none" xmlns="http://www.w3.org/2000/svg">
 <line x1="1.5" y1="1.5" x2="1.50001" y2="121.5" stroke="white" stroke-opacity="0.2" stroke-width="3" stroke-linecap="round"/>
 </svg>
  <div >
             <p>Waktu Pelaksanaan</p>
-            <h6>7 - 10 Maret 2022</h6>
+            <h4>7 - 10 Maret 2022</h4>
           </div>
  
         </div>
@@ -555,11 +552,29 @@
         </div>
     </section>
 
+    <!-- team -->
+    <section id="team">
+      <div class="container">
+         <div class="row justify-content-center">
+          <div class="col-sm-8">
+            <p class="text-center">- Team Kami -</p>
+            <span class="study-circle"></span><h3 class="text-center">Kami Siap Membantu Anda Menjadi Ahli Content Creator Terbaik</h3>
+          </div>
+        </div>
+        <div class="imgteam justify-content-center">
+        <img src="assets/img/images/tim2.png" alt="">
+      </div>
+      </div>
+      
+    </section>
+
+
 
     <!-- FAQ -->
     <section id="faq">
       <div class="row">
         <div class="col">
+          <span class="bullete"></span>
           <h3 class="text-center"> Frequently Asked Questions</h3>
         </div>
       </div>
