UPDATE PALING TERBARU

--- a/index.html
+++ b/index.html
@@ -568,6 +568,11 @@
       
     </section>
 
+    <!-- Video -->
+    <section id="video">
+       <div class="imgteam justify-content-center">
+        <img src="assets/img/images/video.jpg" alt="">
+    </section>
 
 
     <!-- FAQ -->
