--- a/index.html
+++ b/index.html
@@ -565,7 +565,19 @@
         <img src="assets/img/images/tim2.png" alt="">
       </div>
       </div>
-      
+    </section>
+
+    <!-- Gallery -->
+    <section id="gallery">
+        <div class="container">
+         <div class="row justify-content-center">
+          <div class="col-sm-8">
+            <span class="study-circle"></span><h3 class="text-center">Kami Siap Membantu Anda Menjadi Ahli Content Creator Terbaik</h3>
+          </div>
+        </div>
+      </div>
+      <div class="imgteam justify-content-center">
+        <img src="assets/img/images/gallery.jpg" alt="">
     </section>
 
     <!-- Video -->
